
[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwasm = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlInputElement", "EventTarget"] }
